--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.428.0",
+    "mongoose": "^8.5.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
