--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
+    "cookies": "^0.9.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.428.0",
     "mongoose": "^8.5.3",
